--- a/FashionShop_DACS/FashionShop_DACS/Areas/Admin/Views/User/Login.cshtml
+++ b/FashionShop_DACS/FashionShop_DACS/Areas/Admin/Views/User/Login.cshtml
@@ -35,7 +35,7 @@
                 </div>
                 <div>
                     <p>
-                        <a id="forgot-password" asp-area="Identity" asp-page="/Account/ForgotPassword">Forgot your password?</a>
+                        <a id="forgot-password" asp-area="Admin" asp-controller="User" asp-action="ForgotPassword">Forgot your password?</a>
                     </p>
                     <p>
                         <a asp-area="Identity" asp-page="/Account/Register">Register as a new user</a>
