--- a/FashionShop_DACS/FashionShop_DACS/Areas/Admin/Views/Product/Index.cshtml
+++ b/FashionShop_DACS/FashionShop_DACS/Areas/Admin/Views/Product/Index.cshtml
@@ -7,6 +7,9 @@
 <h1>Index</h1>
 
 <p>
+    <a asp-area="Admin" asp-controller="Order" asp-action="Index"><button class="btn btn-success">Manager Order</button></a>
+</p>
+<p>
     <a asp-action="Add"><button class="btn btn-success">Create New</button></a>
 </p>
 <p>
