--- a/FashionShop_DACS/FashionShop_DACS/Views/Product/Index.cshtml
+++ b/FashionShop_DACS/FashionShop_DACS/Views/Product/Index.cshtml
@@ -9,53 +9,25 @@
 @* <p>
     <a asp-action="Add"><button class="btn btn-success">Create Product</button></a>
 </p> *@
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                Image
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                Action
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-               @item.Price.ToString("#,##0")
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                <img src="@item.ImageUrl" style="width: 180px; height: 200px"/>
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Category.Name)
-            </td>
-            <td>
-                    @* <a asp-action="Update" asp-route-id="@item.Id"><button class="btn btn-primary">Update</button></a> | *@
-                    <a asp-action="Display" asp-route-id="@item.Id"><button class="btn btn-warning">Details</button></a> 
-                    @* <a asp-action="Delete" asp-route-id="@item.Id"><button class="btn btn-danger">Delete</button></a> *@
-            </td>
-        </tr>
-    }
-    </tbody>
-</table>
+<section class="py-2">
+    <div class="container px-4 px-lg-5 mt-5">
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justifycontent-center" id="searchResults">
+            @foreach (var item in Model)
+            {
+                <div class="col mb-5">
+                    <div class="card gap-3" style="width: 18rem">
+                        <img src="@item.ImageUrl" class="card-img-top" alt="..." style="height: 300px">
+                        <div class="card-body">
+                            <h5 class="card-title">@Html.DisplayFor(modelItem => item.Name)</h5>
+                            <div class="d-flex">
+                                <span>Price: </span>
+                                <p class="mx-3">@item.Price.ToString("#,##0") Vnđ</p>
+                            </div>
+                            <a asp-action="Display" asp-route-id="@item.Id"><button class="btn btn-warning">Details</button></a>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
