--- a/FashionShop_DACS/FashionShop_DACS/Views/Shared/_Layout.cshtml
+++ b/FashionShop_DACS/FashionShop_DACS/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
 						</li>
 
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Order" asp-action="Index">Order</a>
+							<a class="nav-link text-dark" asp-area="Admin" asp-controller="Order" asp-action="ListOrder">Order</a>
 						</li>
 					</ul>
 					<partial name="_LoginPartial" />
